# zm-next

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE-COMMERCIAL.md  MSE_IPC_Integration_Guide.md  README.md  build.sh  test_binary_mse_client.py  test_hybrid_mse_client.py  test_mse_control.py  test_mse_debug.cpp  test_mse_direct.cpp  test_pipeline_configs.cpp  test_webrtc_client.py  test_webrtc_ffi.cpp  webrtc_client.html  win-build.bat
bench/: CMakeLists.txt  README.md  bench_backend.cpp  bench_decode_detect.cpp  bench_engine.cpp  bench_engine_resources.py  bench_events.cpp  bench_fixes.py  bench_gpu_roi.cpp  bench_motion_diff.cu  bench_overlay.cpp  bench_preprocess.cpp  bench_resources.py  bench_roi_cascade.cpp  bench_vaapi.cpp  d3d11_probe.cpp  detect_bench.cpp  font_glyphs.h  render_samples.py  run_bench.sh  track_offline.cpp  validate_motion_gpudiff.cpp
bench/metal/: metal_backend_test.mm  metal_coreml_infer.mm  metal_va_validate.mm  run_metal_backend_test.sh  run_mlx_vlm_server.sh
bench/vk/: motion_diff_img.comp  motion_diff_img.spv  motion_downsample.comp  motion_downsample.spv  motion_downsample_img.comp  motion_downsample_img.spv  nv12_to_chw.comp  nv12_to_chw.spv  vk_compute_probe.cpp  vk_va_gate.cpp  vk_va_igpu.cpp  vk_va_mixed.cpp  vk_va_motion.cpp  vk_va_preproc.cpp
bench/web/: overlay_demo.html
core/: CMakeLists.txt
core/include/: zm_plugin.h  zm_plugin_utils.h  zm_plugin_v1.h
core/include/zm/: CaptureThread.hpp  EventBus.hpp  PipelineLoader.hpp  PluginManager.hpp  ShmRing.hpp  StageRunner.hpp  WorkerLink.hpp  dl_compat.hpp  monitor.hpp  net_compat.hpp  platform.hpp  stream_socket_protocol.hpp
core/src/: CaptureThread.cpp  EventBus.cpp  PipelineLoader.cpp  PluginManager.cpp  ShmRing.cpp  StageRunner.cpp  WorkerLink.cpp  host_api.cpp  monitor.cpp  plugin_utils.cpp  stream_socket_protocol.cpp  zm_plugin_utils.c
core/tests/: test_capture_rtsp.cpp  test_eventbus.cpp  test_monitor.cpp  test_pipeloader.cpp  test_plugin_manager.cpp  test_shmring.cpp  test_stagerunner.cpp  test_stream_protocol.cpp  test_workerlink.cpp
plugins/: CMakeLists.txt
plugins/alert_policy/: CMakeLists.txt  alert_policy.cpp
plugins/analytics_rules/: CMakeLists.txt  analytics_rules.cpp  geometry.hpp
plugins/analytics_rules/tests/: test_geometry.cpp
plugins/audio_detect/: CMakeLists.txt  audio_detect.cpp  audio_topk.hpp  logmel.hpp
plugins/audio_detect/tests/: test_audio_topk.cpp  test_logmel.cpp
plugins/capture_file/: CMakeLists.txt  capture_file.cpp
plugins/capture_rtsp/: CMakeLists.txt  README.md  capture_rtsp.cpp  rtsp_in.cpp  rtsp_in.cpp.new
plugins/capture_rtsp/tests/: CMakeLists.txt  run_gtest_with_local_rtsp.sh  start_local_rtsp.sh  test_capture_rtsp.cpp  test_rtsp_in.cpp
plugins/capture_rtsp_multi/: CMakeLists.txt  README.md  capture_rtsp_multi.cpp  stream_manager.cpp  stream_manager.hpp
plugins/capture_rtsp_multi/tests/: CMakeLists.txt  run_gtest_with_local_rtsp.sh  test_capture_rtsp_multi.cpp
plugins/common/: base64.hpp  image_encode.hpp
plugins/decode_detect/: CMakeLists.txt  decode_detect.cpp
plugins/decode_ffmpeg/: CMakeLists.txt  decode_ffmpeg.cpp
plugins/decode_ffmpeg/tests/: CMakeLists.txt  test_decode.cpp
plugins/describe_vlm/: CMakeLists.txt  describe_vlm.cpp  vlm_client.hpp
plugins/describe_vlm/tests/: CMakeLists.txt  test_vlm_client.cpp
plugins/detect_onnx/: CMakeLists.txt  detect_cuda.cpp  detect_cuda.cu  detect_cuda.hpp  detect_engine.cpp  detect_engine.hpp  detect_onnx.cpp  detect_postprocess.hpp  hw_backend.cpp  hw_backend.hpp  hw_backend_cuda.cpp  hw_backend_metal.mm  hw_backend_openvino.cpp  hw_backend_vaapi.cpp  hw_backend_vulkan.cpp  motion_persist.hpp  vulkan_ncnn_infer.cpp  vulkan_ncnn_infer.hpp
plugins/detect_onnx/tests/: test_detect_postprocess.cpp
plugins/detect_openvocab/: CMakeLists.txt  detect_openvocab.cpp
plugins/detect_pose/: CMakeLists.txt  detect_pose.cpp  pose_postprocess.hpp
plugins/detect_pose/tests/: test_pose_postprocess.cpp
plugins/detect_seg/: CMakeLists.txt  detect_seg.cpp  seg_postprocess.hpp
plugins/detect_seg/tests/: test_seg_postprocess.cpp
plugins/encode_ffmpeg/: CMakeLists.txt  encode_ffmpeg.cpp
plugins/hello/: CMakeLists.txt  hello.cpp
plugins/llm_event_review/: CMakeLists.txt  llm_event_review.cpp  provider.hpp
plugins/lpr/: CMakeLists.txt  lpr.cpp  lpr_decode.hpp
plugins/lpr/tests/: test_lpr_decode.cpp
plugins/motion_basic/: CMakeLists.txt  motion_basic.cpp
plugins/motion_basic/tests/: CMakeLists.txt  test_motion.cpp
plugins/motion_gate/: CMakeLists.txt  motion_diff.hpp  motion_gate.cpp
plugins/motion_gate/tests/: test_motion_diff.cpp
plugins/motion_hybrid/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  motion_hybrid.cpp  motion_hybrid.hpp  test_config.json  test_motion_hybrid.cpp
plugins/motion_pixel_diff/: CMakeLists.txt  motion_pixel_diff.cpp  motion_pixel_diff.hpp
plugins/output_mqtt/: CMakeLists.txt  mqtt_topic.hpp  output_mqtt.cpp
plugins/output_mqtt/tests/: test_output_mqtt.cpp
plugins/output_mse/: CMakeLists.txt  README.md  example.c  logging_comparison_example.cpp  mse_api.h  output_mse.cpp  output_mse_refactored.cpp
plugins/output_webhook/: CMakeLists.txt  output_webhook.cpp  webhook_util.hpp
plugins/output_webrtc/: CMakeLists.txt  README.md  output_webrtc.cpp
plugins/overlay/: CMakeLists.txt  draw.hpp  overlay.cpp
plugins/overlay/tests/: test_draw.cpp
plugins/pipelines/: cap_then_store.json
plugins/privacy_mask/: CMakeLists.txt  mask_util.hpp  privacy_mask.cpp
plugins/recognize_face/: CMakeLists.txt  face_match.hpp  recognize_face.cpp
plugins/review_export/: CMakeLists.txt  review_export.cpp  review_matte.hpp
plugins/store/: CMakeLists.txt  event_trigger.hpp  store.cpp
plugins/store_event/: CMakeLists.txt  store_event.cpp
plugins/store_filesystem/: CMakeLists.txt  store_filesystem.cpp
plugins/store_snapshot/: CMakeLists.txt  snapshot_util.hpp  store_snapshot.cpp
plugins/tracker/: CMakeLists.txt  tracker.cpp  tracker_core.hpp
plugins/zones/: CMakeLists.txt  zones.cpp  zones.hpp
proto/: CMakeLists.txt  worker_link.proto
(+45 files in other folders)
